--- a/index.html
+++ b/index.html
@@ -1,14 +1,145 @@
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Kurt Hill's Website</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css" />
+  </noscript>
 </head>
 
-<body>
-  <h1>Hello World</h1>
+<body class="is-preload">
+
+  <!-- Sidebar -->
+  <section id="sidebar">
+    <div class="inner">
+      <nav>
+        <ul>
+          <li><a href="#intro">Welcome</a></li>
+          <li><a href="#one">My work</a></li>
+          <li><a href="#two">Get in touch</a></li>
+        </ul>
+      </nav>
+    </div>
+  </section>
+
+  <!-- Wrapper -->
+  <div id="wrapper">
+
+    <!-- Intro -->
+    <section id="intro" class="wrapper style1 fullscreen fade-up">
+      <div class="inner">
+        <h1>Kurt Hill</h1>
+        <p>Just a software developer with a passion for building mobile applications.</p>
+        <ul class="actions">
+          <li><a href="#one" class="button scrolly">Learn more</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- One -->
+    <section id="one" class="wrapper style2 spotlights">
+      <section>
+        <div class="image"><img src="images/bump.png" alt="" data-position="center 800px" />
+        </div>
+        <div class="content">
+          <div class="inner">
+            <h2>Bump</h2>
+            <p>Bump is a utility app designed to do one thing: count kicks! This is a great tool to help monitor and
+              track your baby's
+              health. Record kicks during sessions and view graphical representations of your sessions.</p>
+          </div>
+        </div>
+      </section>
+      <!-- <section>
+        <a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+        <div class="content">
+          <div class="inner">
+            <h2>Feugiat consequat</h2>
+            <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada
+              quis. Aliquam dapibus.</p>
+            <ul class="actions">
+              <li><a href="generic.html" class="button">Learn more</a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section>
+        <a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+        <div class="content">
+          <div class="inner">
+            <h2>Ultricies aliquam</h2>
+            <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada
+              quis. Aliquam dapibus.</p>
+            <ul class="actions">
+              <li><a href="generic.html" class="button">Learn more</a></li>
+            </ul>
+          </div>
+        </div>
+      </section> -->
+    </section>
+
+    <!-- Three -->
+    <section id="two" class="wrapper style1 fade-up">
+      <div class="inner">
+        <h2>Get in touch</h2>
+        <p>I'm happy to assist with any of my published apps. If you have any issues or ideas for improvement please let
+          me know!</p>
+        <div class="split style1">
+          <section>
+            <ul class="contact">
+              <li>
+              </li>
+              <li>
+                <h3>Email</h3>
+                <form method="post" action="mailto:kurtishill.dev@gmail.com"><a href=""
+                    class="submit">kurtishill.dev@gmail.com</a>
+                </form>
+              </li>
+              <li>
+                <h3>Social</h3>
+                <ul class="icons">
+                  <li><a href="https://github.com/kurtishill" target="_blank" class="icon brands fa-github"><span
+                        class="label">GitHub</span></a></li>
+                  <li><a href="https://www.linkedin.com/in/kurt-hill212" target="_blank"
+                      class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                </ul>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </div>
+    </section>
+
+  </div>
+
+  <!-- Footer -->
+  <footer id="footer" class="wrapper style1-alt">
+    <div class="inner">
+      <ul class="menu">
+        <li>&copy; Untitled. All rights reserved.</li>
+        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+      </ul>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.scrollex.min.js"></script>
+  <script src="assets/js/jquery.scrolly.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
