update image position

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- One -->
     <section id="one" class="wrapper style2 spotlights">
       <section>
-        <div class="image"><img src="images/bump.png" alt="" data-position="center 800px" />
+        <div class="image"><img src="images/bump.png" alt="" data-position="center center" />
         </div>
         <div class="content">
           <div class="inner">
